initial final